tests/typing/bad/testfile-clash_method3-1.scala
class A { def m(x: Boolean, y: Int) {}; def m(b: Boolean, n: Int) {} }
object Main { def main(args: Array[String]) { } }
